# openclaw-workspace

./: .dockerignore  .env.docker.example  .env.example  .env.sovereign  .geminiignore  .gitignore  .gitmodules  .mcp.json  .opencode.json  .pre-commit-config.yaml  .secrets.baseline  000_GENESIS.md  000_THEORY.md  333_AXIOMS.md  999_SEAL_TRINITY_DEPLOYMENT.md  AAA_CHARTER.md  AAA_DOCTRINE.md  AAA_DOC_FAMILY_MAP.md  AAA_MCP_HARDENING_PLAN.md  AAA_TRINITY_READY.md  AGENTS.md  AGI_ASI_bot_README.md  AGI_AUTONOMOUS_MANIFEST.md  APEX_Narrative.md  ARCHITECT.md  ARCHITECTURAL_BOUNDARY.md  ARCHITECTURE.md  ARCHIVE_BRANCHES.md  ARIF.md  AUDIT_REPORT_11_MEGA_TOOLS.md  BODY_WIRE_SPEC.md  BOOT.md  BOOTSTRAP.md  BOUNDARY.md  BUGFIX_2026-03-20.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  CONSTITUTION.md  CONSTITUTIONAL_GIT_WORKTREE.md  (+229 more)
.agents/: AGENTS_CANON.md  AGENTS_MAPPING.md  mcp.json
.antigravity/: README.md  mcp_config.json
.arifos/: A2A_SPEC.md
.codex/: mcp.json
.git_mind_backup/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  index
.github/: copilot-instructions.md
.kimi/: MCP_ALIGNMENT_GUIDE.md  mcp.json  settings.json
.openclaw/: openclaw.json  workspace-state.json
.opencode/: opencode.json
.openmcp/: connection.json
.well-known/: agent.json  agent.json.tmp
000/: 000_CONSTITUTION.md  000_MANIFESTO.md  000_THEORY.md  README.md  SEAL.md
000_THEORY/: 000_ARCHITECTURE.md  000_COP_SPEC.md  000_FOUNDATIONS.md  000_LAW.md  001_IGNITION.md  002_GOVERNANCE_EMERGENCE.md  003_WITNESS.md  004_REALITY.md  010_FEDERATION.md  010_TRINITY.md  020_APEX_THEORY.md  030_COGNITIVE_WORKFLOWS.md  111_MIND_GENIUS.md  333_MIND_ATLAS.md  555_HEART_EMPATHY.md  777_SOUL_APEX.md  888_SOUL_VERDICT.md  999_SOVEREIGN_VAULT.md  AGENTIC_ECONOMY_ROADMAP_2026.md  MANIFESTO.md  README.md  ROOTKEY_SPEC.md  STRUCTURE.md  TRINITY_ARCHITECTURE.md  _OUTLINE.md
333_APPS/: ATLAS_NAVIGATION.md  FORGE_SEAL.md  README.md  STATUS.md  forge_init.py  manifesto.py  metabolizer.py
ADR/: ADR-012-A2A-MESH-GOVERNANCE.md  ADR-013-FEDERATION-PHASE2-BLUEPRINT.md  ADR-014-MCP-CONCURRENCY-PHOENIX-73C.md
AGENTS/: README.md  accountability-matrix.yaml  agent-identity.yaml  capability-manifest.yaml  event-bus.yaml  forensic-replay.yaml  memory-ledger.yaml  skills.yaml  system-prompts.yaml
ARCHIVED_TOOLS/: README.md
ROADMAP/: ARIFOS_Technical_Specification.md  CLEANUP_PLAN.md  CLEANUP_PLAN_REVISED.md  DEEP_RESEARCH_FUTURE_VISION_2026_2030.md  DEEP_RESEARCH_SYNTHESIS_v55.md  FUTURE_EMERGENCE_MAP.md  HUMAN_AI_MACHINE_TIERS.md  INTEGRATION_MASTERPLAN.md  MASTER_TODO.md  README.md  ROADMAP.md  ROADMAP_v55_BEYOND.md  TODO.md  TODO_EMERGENCE.md
SDK/: README.md  __init__.py  architect.py  auditor.py  base_agent.py  federation.py  sdk.py  test_architect.py  test_sdk.py
SEARAH/: SEARAH-CORRECTED.html  SEARAH-EXPOSE-FINAL.html  SEARAH-EXPOSE-FINAL.md  fix_bit_errors.py  generate_pdf.py  generate_pdf_v13.py  generate_pdf_v14.py  generate_pdf_v14b.py  generate_pdf_v15.py  generate_pdf_v16.py
VAULT999/: ENV_SOLO_PROFILE_SEAL_v65.0.md  FINAL_HOUSEKEEPING_SEAL_v65.0.md  L0_KERNEL_FORGE_SEAL_v65.0.md  MANIFEST.md  MCP_CONFIG_FORGE_SEAL_v65.0.md  PUSH_MAIN_SUCCESS_2026-03-06.md  README.md  ROADMAP_TODO_UPDATE_SEAL_v65.0.md  WEBHOOK_FIX_AND_USAGE_2026-03-06.md  outcomes.jsonl  session-seal-2026-03-06-governance-reconciliation.md  vault.jsonl  vault999.jsonl
WORKFLOWS/: WORKFLOW_9_SKILLS_ARIFOS_MAPPING.md  WORKFLOW_MORNING_SYNTHESIS.md  WORKFLOW_REPO_STEWARD.md  WORKFLOW_SUBUH_BRIEF.md
_ARCHIVE/: .env.example.deprecated  .env.production.deprecated  .env.sovereign.deprecated  CLEANUP_SUMMARY.md  MCP_REGISTRY_SUBMISSION_v64.2.0.json  MCP_REGISTRY_UPDATE_SUMMARY.md  MCP_REGISTRY_VALIDATION_REPORT.md  SCARS.md
a2a/: A2A_DIALOGUE.md  epistemic_signal_schema.json  vault_self_model.json
a2a-server/: Dockerfile  docker-compose.yml  server.js  vault.js
aaa_mcp/: DEPLOYMENT.md  Dockerfile.alpine  MCP_2025_11_25_ALIGNMENT.md  QC_REPORT_REMOTE_DEPLOYMENT.md  README.md  __init__.py  __main__.py  asi_gateway.py  auth.py  build_info.py  claude_desktop_config.json  cli.py  constitutional_config.py  constitutional_metrics.py  engine_adapters.py  env_bootstrap.py  mcp_config.py  mcp_integration.py  mode_selector.py  observability.py  package.json  requirements.txt  rest.py  selftest.py  server.py  server.py.tail  server_fixed.py  streamable_http_server.py  tools.py  vault_sqlite.py
aclip_cai/: README.md  __main__.py  aclip_cai Intelligence Kernel Upgra.md  cli.py  console_tools.py  mcp_bridge.py  server.py
acp/: openclaw_router.py
af1/: MIDDLEWARE_INVENTORY.md  PHASE_2A_REPORT.md  RED_TEAM_MATRIX.md  af1.schema.json  af1_receipt_logger.py  af1_validator.py
agents/: A-ARCHITECT.md  A-AUDITOR.md  A-ORCHESTRATOR.md  routing.json
agi-stack/: rotate-keys.sh
apex_theory_upgrade/: FloorVisualizer.tsx  PsiShadow.tsx  llms.txt
archive/: CIVILIZATION_BRIDGE_REPORT.md  CONSOLIDATION_PLAN.md  CORE_STRUCTURE.md  DEPLOYMENT_COMPLETE.md  GITHUB_RELEASE_v60.md  KIMI_FIX_SUMMARY.md  LETTER_TO_ARIF.md  MCP_REGISTRY_SUBMISSION.md  REFACTOR_V55_5.md  arifos-v55-5-visual-law.skill  fix_kimi_path.ps1  mcp_server_status.md  memory_consolidation.md  planning
arif-fazil-sites/: VISUAL_ALIGNMENT_REPORT.md
arifOS-sentinel/: ARIF.md  CONSTITUTION.md  HERMES_ASI_MEMORY.md
arifos/: version_validator.py
arifos-53.2.9/: requirements.txt
arifos_aaa_mcp/: __init__.py  __main__.py  contracts.py  governance.py  rest_routes.py  server.py  tool_dials_map.json
arifos_plan/: SCHEMA.sql  __init__.py  arifos_plan.yaml  test_arifos_plan.py
arifosmcp/: bridge.py  capability_map.py
artifacts/: nik_welcome.html
codebase/: authority.py  constitutional_floors.py
config/: agent_capabilities.json  canonical_bootstrap.json  default.yaml  development.yaml  mcp_config_qwen.json  mcporter.json  production.yaml
contracts/: mcp_surface.yaml
core/: README.md  __init__.py  contracts.py  governance_kernel.py  homeostasis.py  judgment.py  pipeline.py  rest_routes.py  risk_engine.py  server.py  telemetry.py  uncertainty_engine.py
data/: Copilotlogs  (+1 more)
(+2897 files in other folders)
