[project]
name = "arifos"
version = "64.2.0"
# v64.2-INIT: Hardened 000_INIT with InjectionGuard and Canonical Contract (2026-02-14)
#   - P0 Refactor: anchor() now uses full InjectionGuard (20+ patterns) vs single-regex
#   - Query Classification: classify_query() from core/organs for adaptive F2 strictness
#   - Canonical Output: f12_score, governance_mode, thermodynamic_budget, query_type
#   - F12 Thresholds: HARD mode (>=0.8 VOID, 0.5-0.8 sanitize), SOFT mode (>=0.9 VOID)
#   - Actor ID: Wired from Telegram context, no "user" bypass
#   - 000_INIT.md: Full specification document for constitutional airlock
#   - Status: SEAL — 000_INIT hardened, ready for P1 (session persistence)
# v64.1-GAGI: Governed AGI Infrastructure (2026-02-13)
#   - Uncertainty Engine: 5-dimensional vector with harmonic/geometric mean
#   - Governance Kernel: Unified GovernanceState with conditional AWAITING_888
#   - Telemetry: 30-day locked adaptation with drift tracking
#   - F4 Fixes: /sse and /messages endpoints return proper Response objects
#   - Module path fix: sys.path.insert(0, os.getcwd()) prevents site-packages shadowing
#   - Status: GAGI RUNTIME OPERATIONAL
# v62.0-STATE: SystemState Exposure for Cognitive Runtime (2026-02-13)
#   - SystemState dataclass: uncertainty, risk, grounding, loop_count, profile
#   - Heuristics module: Cheap, reversible signals (not fake metrics)
#     - detect_profile(): factual/creative/crisis/routine
#     - estimate_uncertainty(): linguistic signals (absolutist/uncertain/question)
#     - estimate_risk(): stakeholder impact from keywords
#     - estimate_grounding(): 0.0 placeholder (Step 2: real T6 evidence)
#   - agi_cognition: Returns system_state with real uncertainty calculation
#   - truth_score now derived from uncertainty (contrast test ready)
#   - omega_0 now from uncertainty (not hardcoded)
#   - Foundation: Meta-scheduler preparation (Step 4)
#   - Status: STEP 1 COMPLETE — Ready for Step 2 (Real T6)
# v61.0-FORGE: 5-Core Constitutional Architecture (2026-02-13)
#   - 5-Core Kernel: init_session, agi_cognition, asi_empathy, apex_verdict, vault_seal
#   - Trinity Pipeline: 000_INIT → 111-333_AGI(Δ) → 555-666_ASI(Ω) → 888_APEX(Ψ) → 999_VAULT(🔒)
#   - 21-Tool Weave: 5 Core + 16 Capability Modules (T6-T21)
#   - Unified AGI: sense + think + reason → agi_cognition
#   - Unified ASI: empathize + align → asi_empathy
#   - Capability Router: Ring 0 (Core) → Ring 3 (Extensions) with F1-F13 enforcement
#   - T15 Localization: MY/SEA support (ms-MY, en-GB, zh-CN, ta-IN)
#   - Code Reduction: 83% lines removed (3647 → 797) while preserving all floors
#   - Status: SEAL — 5-Core Constitutional Kernel ready for production
# v60.1-ACLIP_CAI: 9-Sense Nervous System (2026-02-13)
#   - ACLIP_CAI: Console Intelligence & Perception Console
#   - 9-Tool Nervous System: system_health, process_list, fs_inspect,
#     log_tail, net_status, config_flags, chroma_query, cost_estimator,
#     forge_guard (gating)
#   - MCP Bridge: All tools exposed as aclip_* for 9-law pipeline
#   - Integration: Law 3 (Ground), Law 5 (Search), Law 7 (Guard)
#   - Console-only tools (no ethics), read-only except forge_guard
# v60.0-FORGE: Unified Pipeline + 10-Tool Canon (2026-02-11)
#   - Axiom Engine: Physics/CCS ground truth injection for reality_search
#   - Evidence v2: Cryptographic hash-based integrity across all tools
#   - Plan Objects: Formal tool routing with structured execution plans
#   - Enhanced init_gate: grounding_required parameter for physics-bound sessions
#   - APEX Verdict Semantics: SABAR/PARTIAL/VOID/SEAL with grounding quality
#   - 10 Canonical Tools: Including new tool_router
#   - Constitutional Decorator: Hardened enforcement with pre/post validation
#   - VAULT999: Reality Weight Protocol with immutable Merkle DAG
#   - Trinity Architecture (ΔΩΨ): AGI Mind, ASI Heart, APEX Soul consensus
#   - Entropy: ΔS ≤ 0 — Chaos eliminated, repository aligned
#   - Status: SEAL — Production ready with 888_JUDGE authority
# v53.2.8-CODEBASE-AAA7: ChatGPT MCP Compatibility Fix
#   - Unified DeltaBundle/OmegaBundle to canonical dataclass (bundles.py).
#   - Relaxed SSE transport: text→query aliasing, kwargs pass-through.
#   - AGI as Thinking Aid (insight/rationale, not strict verdicts).
#   - ASI engine: proper Stakeholder objects, field alignment.
# v53.2.7-CODEBASE-AAA7: 7-Core Tool Consolidation (INIT, AGI, ASI, APEX, VAULT, TRINITY, REALITY)
#   - Internalized prompt_codec and context_docs.
#   - Standardized CAPS naming for all tools.
#   - Unified stdio and SSE architectures.
# v52.5.26-LIVE: Dashboard Metrics Integration & Constitutional Governance (2026-01-26)
#   - LiveMetricsService: Real-time constitutional metrics from VAULT999 ledger
#   - Live τ (truth), κᵣ (empathy), Ψ (vitality), ΔS (clarity) computation
#   - API endpoint /metrics/json serves live data with calibration_mode transparency
#   - Removed all static placeholders (0.99, 0.98, 0.85)
#   - Frontend dashboard displays live Trinity scores with 3-decimal precision
#   - F1 Amanah compliance: explicit calibration_mode flag for synthetic data
#   - F2 Truth compliance: τ computed from actual eval harness
#   - 13/13 constitutional floors passing, TEACH score: 0.98/1.00
# v52.5.1-SEAL: ATLAS-333 Integration + Zero-Context README (2026-01-25)
#   - ATLAS-333 smart lane routing (CRISIS/FACTUAL/CARE/SOCIAL)
#   - 888_HOLD verdict for high-stakes human confirmation
#   - Lane-aware thermodynamic profiles (LANE_PROFILES, LANE_ENGINES)
# v52.0.0: Unified Core SEAL - Merged AAA_MCP into Brain, Pure Bridge (2026-01-24)
# v51.0.0: AAA MCP SERVER - Bridge to Core Engines + Rebrand (2026-01-24)
# v50.0.0: Constitutional Housekeeping - Consolidated core (2026-01-20)
# v49.0.0: Constitutional Forge - 13 Floors, Trinity Engines, 25 MCP Servers (2026-01-18)
description = "arifOS - The World's First Production-Grade Constitutional AI Governance System. Mathematical enforcement of ethical constraints with 13 stationary floors (F1-F13), Axiom Engine for physics-grounded truth, and immutable VAULT999 ledger. Trinity architecture (ΔΩΨ): AGI Mind, ASI Heart, APEX Soul. MCP-compatible. Install: pip install arifos. https://arifos.arif-fazil.com/"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
keywords = [
    # Core Concepts
    "ai-governance",
    "ai-safety",
    "constitutional-ai",
    "ai-filter",
    "ai-guardrails",
    # TEACH Framework
    "truth-detection",
    "empathy",
    "reversibility",
    "clarity",
    "humility",
    # v52.5 Features
    "atlas-333",
    "smart-routing",
    "888-hold",
    "crisis-detection",
    # Architecture
    "trinity-architecture",
    "agi-asi-apex",
    "tri-witness",
    # MCP Integration
    "mcp",
    "mcp-server",
    "model-context-protocol",
    # Platforms
    "chatgpt",
    "claude",
    "claude-desktop",
    "cursor-ide",
    "gemini",
    "llm",
    # Technical
    "hallucination-prevention",
    "immutable-ledger",
    "merkle-audit",
    "thermodynamic-governance",
]
authors = [{ name = "Muhammad Arif bin Fazil", email = "arifbfazil@gmail.com" }]
maintainers = [
    { name = "Muhammad Arif bin Fazil", email = "arifbfazil@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.20.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "starlette>=0.30.0",
    "fastmcp>=0.1.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.8.2",
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "rich>=13.7.0",
    "asyncpg>=0.29.0",  # VAULT999 PostgreSQL backend
    "sentence-transformers>=2.2.0",  # H1.2: SBERT-based ASI floors (F5, F6, F9)
    "scikit-learn>=1.3.0",  # H1.2: Cosine similarity for SBERT embeddings
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
]
yaml = ["pyyaml>=6.0.0"]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
]
postgres = ["asyncpg>=0.29.0"]
litellm = ["litellm>=1.0.0"]
governed = [
    "litellm>=1.0.0",
    "httpx>=0.28.0",
    "pygments>=2.16.0",
    "openai>=1.6.0",
]
all = [
    "pyyaml>=6.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "litellm>=1.0.0",
    "httpx>=0.28.0",
    "pygments>=2.16.0",
    "openai>=1.6.0",
    "mcp>=1.0.0",
]

[project.scripts]
# AAA MCP Server Commands (v64.1-GAGI) - 5-Core Constitutional Architecture
# Usage: aaa-mcp [stdio|sse|http]  (default: stdio)
aaa-mcp = "aaa_mcp.__main__:main"

# ACLIP_CAI Console Intelligence Tools (v1.0.0)
# The 10-Sense Nervous System for arifOS Infrastructure
aclip-cai = "aclip_cai.cli:main"
aclip-server = "aclip_cai.server:main"  # MCP server mode

# arifOS Router (v65.0-ROUTER) - Unified Gateway
# Single entry point for Constitutional + Sensory tools
arifos-router = "arifos_router:main"

# Legacy arifos commands (DEPRECATED - will be removed in v54)
# arifos-mcp = "arifos.mcp.__main__:main"
# arifos-mcp-sse = "arifos.mcp.sse:main"
# arifos-mcp-stdio = "arifos.mcp.server:main_stdio"

# Governance Analysis (LEGACY - scripts may not exist)
# arifos-analyze-audit-trail = "scripts.analyze_audit_trail:main"
# arifos-analyze-governance = "scripts.analyze_governance:main"
# arifos-verify-ledger = "scripts.verify_ledger_chain:main"

# Canon Management (LEGACY - scripts may not exist)
# arifos-propose-canon = "scripts.propose_canon_from_receipt:main"
# arifos-seal-canon = "scripts.seal_proposed_canon:main"

# Merkle/Cryptographic (LEGACY - scripts may not exist)
# arifos-compute-merkle = "scripts.compute_merkle_root:main"
# arifos-build-ledger-hashes = "scripts.build_ledger_hashes:main"
# arifos-show-merkle-proof = "scripts.show_merkle_proof:main"

# Utilities (LEGACY)
# arifos-safe-read = "scripts.arifos_safe_read:main"

# MCP Utils Server (LEGACY - uses arifos.mcp)
# aaa-mcp-utils = "arifos.mcp.mcp_utils_server:main"
# arifos-api = "arifos.api.server:run_server"

# Metabolic Pipeline (LEGACY - uses arifos.clip)
# 000 = "arifos.clip.aclip.cli._dispatcher000:main"
# 111 = "arifos.clip.aclip.cli._dispatcher111:main"
# 222 = "arifos.clip.aclip.cli._dispatcher222:main"
# 333 = "arifos.clip.aclip.cli._dispatcher333:main"
# 444 = "arifos.clip.aclip.cli._dispatcher444:main"
# 555 = "arifos.clip.aclip.cli._dispatcher555:main"

# (pytest.ini_options moved below)

[project.urls]
Homepage = "https://github.com/ariffazil/arifOS"
Documentation = "https://github.com/ariffazil/arifOS/blob/main/README.md"
Repository = "https://github.com/ariffazil/arifOS"
Issues = "https://github.com/ariffazil/arifOS/issues"
Changelog = "https://github.com/ariffazil/arifOS/blob/main/CHANGELOG.md"
"Live Server" = "https://arif-fazil.com/"
"Health Check" = "https://aaamcp.arif-fazil.com/health"
"MCP Endpoint" = "https://aaamcp.arif-fazil.com/mcp"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["arifos*", "scripts*", "codebase*", "aaa_mcp*", "mcp_server*", "core*", "aclip_cai*"]
exclude = [
    "arifos.tests*",
    "arifos.tests",
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "core.archive*",  # Exclude archived legacy code
]

[tool.setuptools.package-data]
arifos = ["py.typed", "*.py", "**/*.py"]
"*" = ["spec/*.yaml", "spec/*.json"]

[tool.setuptools.data-files]
"spec" = ["spec/**/*.json", "spec/**/*.yaml", "spec/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests", "arifos/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "asyncio",
    "constitutional",
    "slow",
    "integration",
]
cache_dir = "C:/Users/User/AppData/Local/Temp/pytest_cache"
filterwarnings = [
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14 or greater.:UserWarning:langsmith.schemas",
]
addopts = "-W \"ignore:Core Pydantic V1 functionality isn.t compatible with Python 3.14 or greater.:UserWarning:langsmith.schemas\""

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["archive/**", "archive_local/**", "tests/**"]

[tool.ruff.per-file-ignores]
# "arifos_core/adapters/llm_openai.py" = ["F401"]
# "arifos_core/engines/apex_engine.py" = ["F401"]
"tests/test_runtime_manifest.py" = ["F401"]
"tests/test_session_dependency_guard.py" = ["F821", "F841"]
"tests/test_sovereignty_all_providers.py" = ["F401", "F841"]
"tests/test_v35_features.py" = ["F401"]
"tests/test_waw_organs.py" = ["F401", "F811"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_optional = true
strict_equality = true
# Display settings (merged from mypy.ini)
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true
namespace_packages = true

[[tool.mypy.overrides]]
# Core governance modules - stricter type enforcement
module = [
    "arifos.enforcement.metrics",
    "arifos.enforcement.genius_metrics",
    "arifos.engines.APEX_PRIME",
    "arifos.pipeline",
    "arifos.organs.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Relax rules for tests
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
# Ignore missing stubs for third-party libraries
module = [
    "numpy.*",
    "pydantic.*",
    # Optional bridge dependencies (not required for core)
    "boto3.*",
    "guardrails.*",
    "langkit.*",
    "llama_guard.*",
    "ragas.*",
    "dspy.*",
    "guidance.*",
    "outlines.*",
    "llama_index.*",
    # API dependencies (optional)
    "fastapi.*",
    "uvicorn.*",
    "starlette.*",
    # MCP & AI SDKs (merged from mypy.ini)
    "litellm.*",
    "fastmcp.*",
    "openai.*",
    "anthropic.*",
    "langchain.*",
    # Data & ML libraries
    "chromadb.*",
    "qdrant_client.*",
    "sentence_transformers.*",
    "transformers.*",
    "mem0.*",
    # Infrastructure
    "redis.*",
    "sqlalchemy.*",
    "asyncpg.*",
    # Agent frameworks
    "pyautogen.*",
    "pydocket.*",
    "llamaindex.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Bridge files have optional imports - suppress unused-ignore warnings
module = ["arifos_core.waw.bridges.*", "arifos_core.kms_signer"]
warn_unused_ignores = false
