[project]
name = "arifos"
version = "2026.2.23"
# T000 Versioning: YYYY.MM.DD — see T000_VERSIONING.md and CHANGELOG.md for full history
# 2026.2.23 — Perplexity-first search grounding with Brave fallback
#   Added optional PPLX API gateway for search_reality/fetch_content workflows
# 2026.2.23 — SSE-primary runtime + MCP fallback + full-context MCP resources/prompts
#   Added MCP resources/prompts and session/auth continuity hardening in unified server
# 2026.2.22 — Intelligence Kernel Upgrade (aclip_cai 9-Sense Console)
#   Re-architected aclip_cai to 9-Sense Federation Hub; 9 canonical system calls
# 2026.2.19 — ChatGPT integration + tool annotations (readOnlyHint)
#   Added search/fetch tools for ChatGPT Deep Research; annotated read-only tools
# 2026.2.17 — H1.1 Observability + VPS migration (Railway → Hostinger)
#   /health now returns granular governance metrics; redis.from_url; lifespan init
# 2026.2.15 — Codebase consolidation: removed arifos/ and codebase/ (21K lines dead code)
# 2026.1.26 — Live constitutional metrics; 13/13 floors passing
# 2026.1.24 — Unified core: aaa_mcp pure transport, all logic in core/
# 2026.1.18 — Constitutional Forge: 13 floors F1-F13, Trinity ΔΩΨ, VAULT999, 9-tool MCP
description = "arifOS - The World's First Production-Grade Constitutional AI Governance System. Mathematical enforcement of ethical constraints with 13 stationary floors (F1-F13), Axiom Engine for physics-grounded truth, and immutable VAULT999 ledger. Trinity architecture (ΔΩΨ): AGI Mind, ASI Heart, APEX Soul. MCP-compatible. Install: pip install arifos. https://arifos.arif-fazil.com/"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
keywords = [
    # Core Concepts
    "ai-governance",
    "ai-safety",
    "constitutional-ai",
    "ai-filter",
    "ai-guardrails",
    # TEACH Framework
    "truth-detection",
    "empathy",
    "reversibility",
    "clarity",
    "humility",
    # v52.5 Features
    "atlas-333",
    "smart-routing",
    "888-hold",
    "crisis-detection",
    # Architecture
    "trinity-architecture",
    "agi-asi-apex",
    "tri-witness",
    # MCP Integration
    "mcp",
    "mcp-server",
    "model-context-protocol",
    # Platforms
    "chatgpt",
    "claude",
    "claude-desktop",
    "cursor-ide",
    "gemini",
    "llm",
    # Technical
    "hallucination-prevention",
    "immutable-ledger",
    "merkle-audit",
    "thermodynamic-governance",
]
authors = [{ name = "Muhammad Arif bin Fazil", email = "arifbfazil@gmail.com" }]
maintainers = [
    { name = "Muhammad Arif bin Fazil", email = "arifbfazil@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.20.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "starlette>=0.30.0",
    "fastmcp==3.0.1",
    "openapi-pydantic>=0.5.1",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.8.2",
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "rich>=13.7.0",
    "asyncpg>=0.29.0",  # VAULT999 PostgreSQL backend
    "sentence-transformers>=2.2.0",  # H1.2: SBERT-based ASI floors (F5, F6, F9)
    "scikit-learn>=1.3.0",  # H1.2: Cosine similarity for SBERT embeddings
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "redis>=5.0.0",
    "psutil>=5.9.0",
]
yaml = ["pyyaml>=6.0.0"]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
]
postgres = ["asyncpg>=0.29.0"]
litellm = ["litellm>=1.0.0"]
governed = [
    "litellm>=1.0.0",
    "httpx>=0.28.0",
    "pygments>=2.16.0",
    "openai>=1.6.0",
]
observability = [
    "pyjwt>=2.8.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-starlette>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "prometheus-client>=0.19.0",
]
all = [
    "pyyaml>=6.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "litellm>=1.0.0",
    "httpx>=0.28.0",
    "pygments>=2.16.0",
    "openai>=1.6.0",
    "mcp>=1.0.0",
    "pyjwt>=2.8.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "prometheus-client>=0.19.0",
]

[project.scripts]
# arifOS Canonical CLI (v65.0-FORGE-UVX)
# Usage: uvx arifos [stdio|sse|http|rest]
arifos = "arifos_aaa_mcp.__main__:main"
aaa-mcp = "arifos_aaa_mcp.__main__:main"
arifos-mcp = "arifos_aaa_mcp.__main__:main"

# ACLIP_CAI Console Intelligence Tools (v1.0.0)
aclip-cai = "aclip_cai.cli:main"
aclip-server = "arifos_aaa_mcp.__main__:main"  # Canonical AAA MCP surface

# arifOS FORGE-2 CLI (v2026.2.23-FORGE2)
arifos-cli = "aaa_mcp.cli:main"
arifos-forge2 = "aaa_mcp.cli:main"

# arifOS Router (v65.0-ROUTER) - Unified Gateway
# Single entry point for Constitutional + Sensory tools
arifos-router = "arifos_router:main"

# Legacy arifos commands (DEPRECATED - will be removed in v54)
# arifos-mcp = "arifos.mcp.__main__:main"
# arifos-mcp-sse = "arifos.mcp.sse:main"
# arifos-mcp-stdio = "arifos.mcp.server:main_stdio"

# Governance Analysis (LEGACY - scripts may not exist)
# arifos-analyze-audit-trail = "scripts.analyze_audit_trail:main"
# arifos-analyze-governance = "scripts.analyze_governance:main"
# arifos-verify-ledger = "scripts.verify_ledger_chain:main"

# Canon Management (LEGACY - scripts may not exist)
# arifos-propose-canon = "scripts.propose_canon_from_receipt:main"
# arifos-seal-canon = "scripts.seal_proposed_canon:main"

# Merkle/Cryptographic (LEGACY - scripts may not exist)
# arifos-compute-merkle = "scripts.compute_merkle_root:main"
# arifos-build-ledger-hashes = "scripts.build_ledger_hashes:main"
# arifos-show-merkle-proof = "scripts.show_merkle_proof:main"

# Utilities (LEGACY)
# arifos-safe-read = "scripts.arifos_safe_read:main"

# MCP Utils Server (LEGACY - uses arifos.mcp)
# aaa-mcp-utils = "arifos.mcp.mcp_utils_server:main"
# arifos-api = "arifos.api.server:run_server"

# Metabolic Pipeline (LEGACY - uses arifos.clip)
# 000 = "arifos.clip.aclip.cli._dispatcher000:main"
# 111 = "arifos.clip.aclip.cli._dispatcher111:main"
# 222 = "arifos.clip.aclip.cli._dispatcher222:main"
# 333 = "arifos.clip.aclip.cli._dispatcher333:main"
# 444 = "arifos.clip.aclip.cli._dispatcher444:main"
# 555 = "arifos.clip.aclip.cli._dispatcher555:main"

# (pytest.ini_options moved below)

[project.urls]
Homepage = "https://github.com/ariffazil/arifOS"
Documentation = "https://arifos.arif-fazil.com"
Repository = "https://github.com/ariffazil/arifOS"
Issues = "https://github.com/ariffazil/arifOS/issues"
Changelog = "https://github.com/ariffazil/arifOS/blob/main/CHANGELOG.md"
"Live Server" = "https://arifosmcp.arif-fazil.com"
"Health Check" = "https://arifosmcp.arif-fazil.com/health"
"MCP Endpoint" = "https://arifosmcp.arif-fazil.com/sse"
"MCP Fallback" = "https://arifosmcp.arif-fazil.com/mcp"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "scripts*",
    "aaa_mcp*",
    "arifos_aaa_mcp*",
    "mcp_server*",
    "core*",
    "aclip_cai*",
]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "core.archive*",  # Exclude archived legacy code
]

[tool.setuptools.package-data]
"*" = ["spec/*.yaml", "spec/*.json"]

[tool.setuptools.data-files]
"spec" = ["spec/**/*.json", "spec/**/*.yaml", "spec/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "asyncio",
    "constitutional",
    "slow",
    "integration",
]
cache_dir = "C:/Users/User/AppData/Local/Temp/pytest_cache"
filterwarnings = [
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14 or greater.:UserWarning:langsmith.schemas",
]
addopts = "-W \"ignore:Core Pydantic V1 functionality isn.t compatible with Python 3.14 or greater.:UserWarning:langsmith.schemas\""

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["archive/**", "archive_local/**", "tests/**"]

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, I: isort, UP: pyupgrade, N: pep8-naming, B: flake8-bugbear
select = ["E", "F", "I", "UP", "N", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/test_runtime_manifest.py" = ["F401"]
"tests/test_session_dependency_guard.py" = ["F821", "F841"]
"tests/test_sovereignty_all_providers.py" = ["F401", "F841"]
"tests/test_v35_features.py" = ["F401"]
"tests/test_waw_organs.py" = ["F401", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_optional = true
strict_equality = true
# Display settings (merged from mypy.ini)
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true
namespace_packages = true

[[tool.mypy.overrides]]
# Core governance modules - stricter type enforcement
module = [
    "core.governance_kernel",
    "core.judgment",
    "core.pipeline",
    "core.organs.*",
    "core.shared.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Relax rules for tests
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
# Ignore missing stubs for third-party libraries
module = [
    "numpy.*",
    "pydantic.*",
    # Optional bridge dependencies (not required for core)
    "boto3.*",
    "guardrails.*",
    "langkit.*",
    "llama_guard.*",
    "ragas.*",
    "dspy.*",
    "guidance.*",
    "outlines.*",
    "llama_index.*",
    # API dependencies (optional)
    "fastapi.*",
    "uvicorn.*",
    "starlette.*",
    # MCP & AI SDKs (merged from mypy.ini)
    "litellm.*",
    "fastmcp.*",
    "openai.*",
    "anthropic.*",
    "langchain.*",
    # Data & ML libraries
    "chromadb.*",
    "qdrant_client.*",
    "sentence_transformers.*",
    "transformers.*",
    "mem0.*",
    # Infrastructure
    "redis.*",
    "sqlalchemy.*",
    "asyncpg.*",
    # Agent frameworks
    "pyautogen.*",
    "pydocket.*",
    "llamaindex.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Bridge files have optional imports - suppress unused-ignore warnings
module = ["aaa_mcp.core.*"]
warn_unused_ignores = false
